<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="20dp"
    app:cardBackgroundColor="@color/backgroundC">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/name"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/datNombre"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="Jhon Leturne"
                android:textColor="@color/black"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/age"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/datEdad"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="18 años"
                android:textColor="@color/black"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/email"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/datCorreo"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="jhonleturne@outlook.com"
                android:textColor="@color/black"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/user"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/datUsuario"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="TheBlack"
                android:textColor="@color/black"></TextView>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/AgeDate"
                android:textColor="@color/black"></TextView>

            <TextView
                android:id="@+id/datFecha"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:text="2000-12-25"
                android:textColor="@color/black"></TextView>
        </LinearLayout>

    </LinearLayout>



</androidx.cardview.widget.CardView>